# fractal

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: color.rs  main.rs
